Fix homepage Contact, Polish browsing page card style

--- a/Asssignment_5/css/style.css
+++ b/Asssignment_5/css/style.css
@@ -297,7 +297,7 @@ a:link, a:visited {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-evenly;
-    margin: auto 1rem 0.5rem 2rem;
+    margin: 1rem 1rem 0.5rem 2rem;
 }
 .connamon-roll-card-details {
     text-decoration: underline;
@@ -305,9 +305,10 @@ a:link, a:visited {
 
 .cinnamon-roll-card-button {
     font-family: 'Tinos', serif;
+    font-size: 0.9rem;
     background-color: #FCF1D0;
     text-decoration: none;
-    padding: 0.6em 0.8rem;
+    padding: 0.4em 0.8rem;
     border-radius: 10px;
     border: 2px solid #E0B472;
     box-shadow: 3px 4px 4px #D7C89B;
