--- a/Asssignment_5/css/style.css
+++ b/Asssignment_5/css/style.css
@@ -16,7 +16,6 @@ a:link, a:visited {
     text-decoration: underline;
     text-decoration-color: #ecbf7c;
     text-decoration-line: underline;
-    text-decoration-thickness: 5px;
 }
 
 .twice-line-height {
@@ -46,6 +45,8 @@ a:link, a:visited {
     border-right: 7px solid transparent;
     border-top: 10px solid #ecbf7c;
   }
+
+/* index page css */
 
 #top-section {
     background-image: url("../images/homepage-bakery.jpg");
