--- a/Asssignment_5/css/style.css
+++ b/Asssignment_5/css/style.css
@@ -398,19 +398,29 @@ footer {
 }
 
 /* dropdown */
-.dropdown {
+.dropdown-appearance {
     border: 2px solid #ecbf7c;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 6rem;
+    align-items: top;
+    width: 8rem;
     border-radius: 5px;
 }
 
 .dropdown-placeholder {
     margin: 0;
     padding: 1px 5px;
+}
+
+.dropdown-content {
+    position: absolute;
+    width: 8.2rem;
+    /* display: none; */
+}
+.dropdown-content p {
+    border: 2px solid #ecbf7c;
+    margin: 0 0 0 1px;
 }
 
 .arrow-down-wrapper {
