--- a/assignment_6/css/style.css
+++ b/assignment_6/css/style.css
@@ -457,3 +457,69 @@ footer {
     box-shadow: 3px 4px 4px #D7C89B;
     font-size: 1rem;
 }
+
+/* Shopping Cart Page */
+
+.shopping-cart {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    margin: auto;
+}
+
+.shopping-cart hr {
+    width: 80vw;
+    border-top: 2px solid #d9d9d9;
+}
+
+.shopping-cart-item {
+    display: flex;
+    padding: 1rem 2rem;
+    font-size: 1.3rem;
+}
+
+.shopping-cart-item-left {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: auto;
+}
+
+.shopping-cart-item-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: auto;
+}
+
+.shopping-cart-item-img {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 5px;
+    margin-right: 1rem;
+}
+
+#shopping-cart-original-image {
+    background-image: url(../images/cinnamon-roll-5.jpg);
+    background-size: cover;
+}
+
+.shopping-cart-item-glazing-dropdown {
+    width: 10vw;
+    height: 2rem;
+    border: 3px solid goldenrod;
+    border-radius: 5px;
+    margin-right: 1rem;
+}
+
+.shopping-cart-item-quantity-dropdown {
+    width: 10vw;
+    height: 2rem;
+    border: 3px solid goldenrod;
+    border-radius: 5px;
+    margin-right: 1rem;
+}
+
+.shopping-cart-item-price {
+    margin: 0 2rem;
+}
