--- a/assignment_6/css/style.css
+++ b/assignment_6/css/style.css
@@ -397,6 +397,33 @@ footer {
     margin-right: 10vw;
 }
 
+/* Below two classes are for the image overlay displaying current selection of users */
+
+/* But firstly, use flexbox to align them correctly */
+.product-detail-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.quantity-display {
+    display: none;
+    margin: auto 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 100%;
+    height: 2rem;
+    text-align: center;
+}
+
+.glazing-display {
+    display: none;
+    margin: auto 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 100%;
+    height: 2rem;
+    text-align: center;
+}
+
 .product-detail-description {
     width: 35vw;
 }
@@ -413,17 +440,12 @@ footer {
     border: 2px solid #ecbf7c;
     background-color: #fff8ec;
     height: 1.7rem;
-    width: 8rem;
+    width: 10rem;
     padding: 2px;
     border-radius: 5px;
     cursor: pointer;
     outline: none;
     
-}
-
-.dropdown-placeholder {
-    margin: 0;
-    padding: 1px 5px;
 }
 
 .dropdown-content {
