--- a/assignment_6/css/style.css
+++ b/assignment_6/css/style.css
@@ -403,25 +403,49 @@ footer {
 .product-detail-img {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.quantity-display-box {
+    display: none;
+    margin: 3rem 1rem 0 auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ecbf7c;
+    border-radius: 20px;
+    width: 5rem;
+    height: 6rem;
+    text-align: center;
+}
+
+.quantity-display-box p {
+    margin-bottom: 0.5rem;
 }
 
 .quantity-display {
-    display: none;
-    margin: auto 0;
-    background-color: rgba(255, 255, 255, 0.4);
-    width: 100%;
-    height: 2rem;
-    text-align: center;
+    margin-top: 0;
+    font-size: 2rem;
 }
 
-.glazing-display {
+.glazing-display-box {
     display: none;
-    margin: auto 0;
-    background-color: rgba(255, 255, 255, 0.4);
-    width: 100%;
-    height: 2rem;
+    margin: 0 1rem 0 auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 5rem;
+    height: 6rem;
     text-align: center;
+    border: 1px solid #ecbf7c;
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+}
+
+.glazing-display-box p {
+    margin-bottom: 0.8rem;
+}
+
+.glazing-display-text {
+    margin: 0;
+    font-size: 1.1rem;
 }
 
 .product-detail-description {
@@ -515,7 +539,7 @@ footer {
 
 .shopping-cart-item {
     display: flex;
-    padding: 1rem 2rem;
+    padding: 1rem;
     font-size: 1.3rem;
 }
 
@@ -545,24 +569,23 @@ footer {
     background-size: cover;
 }
 
-.shopping-cart-item-glazing-dropdown {
-    width: 10vw;
-    height: 2rem;
-    border: 3px solid goldenrod;
+.cart-dropdown-appearance {
+    font-family: 'Tinos', serif;
+    font-size: 0.9rem;
+    margin-right: 0.5rem;
+    border: 2px solid #ecbf7c;
+    background-color: #fff8ec;
+    height: 1.7rem;
+    width: 8rem;
+    padding: 2px;
     border-radius: 5px;
-    margin-right: 1rem;
-}
-
-.shopping-cart-item-quantity-dropdown {
-    width: 10vw;
-    height: 2rem;
-    border: 3px solid goldenrod;
-    border-radius: 5px;
-    margin-right: 1rem;
+    cursor: pointer;
+    outline: none;
+    
 }
 
 .shopping-cart-item-price {
-    margin: 0 2rem;
+    margin: 0 1rem;
 }
 
 .delete-button {
