--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, "Lucida Grande", sans-serif;
+  background-color: #1C1E26;
+  color: #fff;
 }
 
 a {
@@ -20,4 +22,9 @@ a {
 
 a:hover {
   border-color: transparent;
+}
+
+.content-wrapper {
+  width: 80vw;
+  margin: auto;
 }
