--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,9 +7,12 @@
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, "Lucida Grande", sans-serif;
   background-color: #1C1E26;
-  color: #fff;
+  color: rgba(255, 255, 255, 1);
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 15pt;
+  font-weight: 100;
+  line-height: 2em;
 }
 
 a {
@@ -24,7 +29,18 @@ a:hover {
   border-color: transparent;
 }
 
+p {
+  margin-bottom: 0.6rem;
+}
+
 .content-wrapper {
+  display: flex;
   width: 80vw;
   margin: auto;
+}
+
+.title {
+  font-size: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
