--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -33,8 +33,27 @@ p {
   margin-bottom: 0.6rem;
 }
 
+section {
+  margin: 10vh 0;
+}
+
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  margin: 1.8rem
+}
+
+.nav-link:hover {
+  color: #E44C65;
+  text-decoration: none;
+  border-bottom: dotted 1px;
+}
+
+
 .content-wrapper {
   display: flex;
+  flex-direction: column;
   width: 80vw;
   margin: auto;
 }
