Add example project detail page (CovidTwitterWorkAnalysis), add Links from the projects page to detail pages

--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -50,6 +50,17 @@ section {
   border-bottom: dotted 1px;
 }
 
+.project-card-link {
+  color: #fff;
+  text-decoration: none;
+  border: none;
+}
+
+.project-card-link:hover {
+  color: #E44C65;
+  text-decoration: none;
+}
+
 
 .content-wrapper {
   display: flex;
