--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -15,6 +15,14 @@ body {
   line-height: 2em;
 }
 
+@media screen and (max-width: 576px) {
+  body {
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 2em;
+  }
+}
+
 a {
   color: #E44C65;
   text-decoration: none;
@@ -41,13 +49,21 @@ section {
   color: #fff;
   text-decoration: none;
   border: none;
-  margin: 1.8rem
+  margin: 1.8rem;
 }
 
 .nav-link:hover {
   color: #E44C65;
   text-decoration: none;
   border-bottom: dotted 1px;
+}
+
+/* responsive nav bar */
+@media screen and (max-width: 576px) {
+  .nav-link {
+    padding: 0;
+    margin: 0.5rem;
+  }
 }
 
 .project-card-link {
@@ -77,4 +93,10 @@ section {
   font-size: 2.5rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+@media screen and (max-width: 576px) {
+  .title {
+    font-size: 1.5rem;
+  }
 }
