--- a/assignment_8/src/App.css
+++ b/assignment_8/src/App.css
@@ -93,6 +93,7 @@ section {
   font-size: 2.5rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  line-height: 1.5;
 }
 
 @media screen and (max-width: 576px) {
